--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <html>
     <head>
-        <title>Ticket System</title>
-        <link href="style.css" type="text/css" rel="stylesheet"/>
+        <title>Profile</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet"/>
+        <link href='https://fonts.googleapis.com/css?family=Archivo Black' rel='stylesheet'/>
+        <link href="profile.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
+        <div id="myheader">
+            <p>Cade Heinberg</p>
+        </div>
         <header>
             <br>
-            <h1>Ticket System</h1>
+            <h1>Projects</h1>
         </header>
-        <div class="centerButtons">
-            <a href="studentLogin.html">
-                <button class="studentButton">Student Login</button>
-            </a>
-            <button class="adminButton">Admin Login</button>
+        <div class="centerLinks">
+            <a href="/ticketsystem/homepage.html" id="wordLink">Ticket System</a>
+        </div>
+        <div id="myfooter">
+            <p id="footerTitle">Designed and created by:</p>
+            <div id="footerParagraphs">
+                <p>Cade Heinberg<p>
+                <p>cheinberg@wisc.edu<p>
+                <p>UW Madison, Class of 2023<p>
+            </div>
         </div>
     </body>
 </html>
