--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="/ticketsystem/homepage.html" id="wordLink">Ticket System</a>
         </div>
         <div id="myfooter">
-            <p id="footerTitle">Designed and created by:</p>
+            <p id="footerTitle">Designed and Created by:</p>
             <div id="footerParagraphs">
                 <p>Cade Heinberg<p>
                 <p>cheinberg@wisc.edu<p>
