--- a/ticketsystem/homepage.html
+++ b/ticketsystem/homepage.html
@@ -12,7 +12,7 @@
         </div>
         <header>
             <br>
-            <h1>Are you?</h1>
+            <h1>Login</h1>
         </header>
         <div class="centerButtons">
             <a href="studentLogin.html">
@@ -23,7 +23,7 @@
             </a>
         </div>
         <div id="myfooter">
-            <p id="footerTitle">Designed and created by:</p>
+            <p id="footerTitle">Designed and Created by:</p>
             <div id="footerParagraphs">
                 <p>Cade Heinberg<p>
                 <p>cheinberg@wisc.edu<p>
