--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
     <body>
         <div id="myheader">
-            <p>Cade Heinberg</p>
+            Cade Heinberg
+            <img src="selfie.png" id="headerImage">
         </div>
         <header>
             <br>
