--- a/ticketsystem/homepage.html
+++ b/ticketsystem/homepage.html
@@ -8,9 +8,11 @@
     </head>
     <body>
         <div id="myheader">
-            <p>Ticket System</p>
+            Ticket System
         </div>
         <header>
+            <br>
+            <br>
             <br>
             <h1>Login</h1>
         </header>
