--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
     <body>
         <div id="myheader">
-            <p>Cade Heinberg</p>
+            Cade Heinberg
+            <img src="selfie.png" id="headerImage">
         </div>
         <header>
             <br>
@@ -18,7 +19,7 @@
             <a href="/ticketsystem/homepage.html" id="wordLink">Ticket System</a>
         </div>
         <div id="myfooter">
-            <p id="footerTitle">Designed and created by:</p>
+            <p id="footerTitle">Designed and Created by:</p>
             <div id="footerParagraphs">
                 <p>Cade Heinberg<p>
                 <p>cheinberg@wisc.edu<p>
