--- a/index.html
+++ b/index.html
@@ -1,41 +1,21 @@
 <html>
     <head>
+        <META charset="UTF-8"/>
         <title>Profile</title>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com"/>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet"/>
         <link href='https://fonts.googleapis.com/css?family=Archivo Black' rel='stylesheet'/>
         <link href="profile.css" type="text/css" rel="stylesheet"/>
     </head>
+
     <body>
-        <div id="myheader">
-            Cade Heinberg
-            <img src="selfie.png" id="headerImage">
-        </div>
         <header>
-            <br>
-            <h1>Projects</h1>
+            <img src="selfie.png" id="selfie"/>
+            <h1>Cade Heinberg</h1>
         </header>
-        <div class="centerLinks">
-            <a href="/ticketsystem/homepage.html" id="wordLink">Ticket System</a>
-        </div>
-<<<<<<< HEAD
-        <div id="myfooter">
-            <p id="footerTitle">Designed and Created by:</p>
-            <div id="footerParagraphs">
-                <p>Cade Heinberg<p>
-                <p>cheinberg@wisc.edu<p>
-                <p>UW Madison, Class of 2023<p>
-            </div>
-        </div>
-=======
->>>>>>> 01098797041f7687f2fe8b7129a3649355a86588
+        <nav>
+            <a href="index.html"><button>Home</button></a>
+            <a href="homepage.html"><button>Portfolio</button></a>
+        </nav>
     </body>
-    <div id="myfooter">
-        <p id="footerTitle">Designed and Created by:</p>
-        <div id="footerParagraphs">
-            <p>Cade Heinberg<p>
-            <p>cheinberg@wisc.edu<p>
-            <p>UW Madison, Class of 2023<p>
-        </div>
-    </div>
 </html>
