--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
         <nav>
             <a href="index.html"><button>Home</button></a>
-            <a href="homepage.html"><button>Portfolio</button></a>
+            <a href="/ticketsystem/homepage.html"><button>Portfolio</button></a>
         </nav>
     </body>
 </html>
