--- a/index.html
+++ b/index.html
@@ -15,8 +15,26 @@
             <h1>Cade Heinberg</h1>
         </header>
         <nav>
-            <a href="index.html"><button>Home</button></a>
-            <a href="/ticketsystem/homepage.html"><button>Portfolio</button></a>
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="resume.html">Resume</a>
+            <a href="school.html">School</a>
         </nav>
+        <div id="pageinfo">
+            <section id="welcome">
+                <p>Hello and welcome to my page</p>
+                <p>On this site, you can find all sorts of
+                    information about me.</p>
+
+                <p>
+                    Use the navigation bar above to
+                    view what I have been up to lately!
+                </p>
+            </section>
+        </div>
+        <footer>
+            <p>Cade Austin Heinberg</p>
+            <p>cheinberg@wisc.edu</p>
+        </footer>
     </body>
 </html>
