--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <body>
         <header>
             <img src="selfie.png" id="selfie"/>
-            <h1>Cade Heinberg</h1>
+            <h1>Cade</h1>
+            <h1>Heinberg</h1>
         </header>
         <nav>
             <a href="index.html">Home</a>
