--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 
     <body>
         <header>
-            <img src="selfie.png" id="selfie"/>
-            <h1>Cade</h1>
-            <h1>Heinberg</h1>
+            <div id="selfiebox">
+                <img src="selfie.png" id="selfie"/>
+            </div>
+            <div id="mynamebox">
+                <h1>Cade Heinberg</h1>
+            </div>
         </header>
         <nav>
             <a href="index.html">Home</a>
