--- a/projects.html
+++ b/projects.html
@@ -11,8 +11,12 @@
 
     <body>
         <header>
-            <img src="selfie.png" id="selfie"/>
-            <h1>Cade Heinberg</h1>
+            <div id="selfiebox">
+                <img src="selfie.png" id="selfie"/>
+            </div>
+            <div id="mynamebox">
+                <h1>Cade Heinberg</h1>
+            </div>
         </header>
         <nav>
             <a href="index.html">Home</a>
@@ -26,7 +30,6 @@
                     <a id="link" href="/ticketsystem/homepage.html">Ticket System</a>
                     - November 2020
                 </p>
-
             </section>
         </div>
         <footer>
@@ -35,3 +38,5 @@
         </footer>
     </body>
 </html>
+
+
