--- a/school.html
+++ b/school.html
@@ -11,8 +11,12 @@
 
     <body>
         <header>
-            <img src="selfie.png" id="selfie"/>
-            <h1>Cade Heinberg</h1>
+            <div id="selfiebox">
+                <img src="selfie.png" id="selfie"/>
+            </div>
+            <div id="mynamebox">
+                <h1>Cade Heinberg</h1>
+            </div>
         </header>
         <nav>
             <a href="index.html">Home</a>
@@ -22,7 +26,9 @@
         </nav>
         <div id="pageinfo">
             <section id="welcome">
-                <p>school stuff</p>
+                <p>
+                    School stuff here
+                </p>
             </section>
         </div>
         <footer>
