--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com"/>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet"/>
         <link href='https://fonts.googleapis.com/css?family=Archivo Black' rel='stylesheet'/>
-        <link href="profile.css" type="text/css" rel="stylesheet"/>
+        <link href="/profileCSS/profile.css" type="text/css" rel="stylesheet"/>
+        <link href="/profileCSS/profileIPHONE.css" type="text/css" rel="stylesheet"/>
     </head>
 
     <body>
@@ -19,26 +20,38 @@
             </div>
         </header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="resume.html">Resume</a>
-            <a href="school.html">School</a>
+            <ul>
+                <li style="border-right-style: none">
+                    <a href="index.html">Home</a>
+                </li>
+                <li style="border-right-style: none">
+                    <a href="projects.html">Projects</a>
+                </li>
+                <li style="border-right-style: none">
+                    <a href="resume.html">Jobs</a>
+                </li>
+                <li>
+                    <a href="school.html">School</a>
+                </li>
+            </ul>
         </nav>
         <div id="pageinfo">
             <section id="welcome">
-                <p>Hello and welcome to my page</p>
-                <p>On this site, you can find all sorts of
-                    information about me.</p>
-
-                <p>
-                    Use the navigation bar above to
-                    view what I have been up to lately!
-                </p>
+                Welcome to my website!
+                <br><br><br><br><br>
+                This is an ongoing blog of my projects, classes,
+                jobs, and anything else related!
+                <br><br><br><br><br>
+                If you would like to connect with me my
+                <a href="#gotobottom" style="font-size: 20px; color: rgb(0, 255, 64); text-decoration: underline; ">contact</a> info is below.
+                Go ahead, explore the website!
             </section>
         </div>
-        <footer>
+        <footer id="gotobottom">
             <p>Cade Austin Heinberg</p>
             <p>cheinberg@wisc.edu</p>
         </footer>
     </body>
 </html>
+
+
