--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com"/>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet"/>
         <link href='https://fonts.googleapis.com/css?family=Archivo Black' rel='stylesheet'/>
-        <link href="profile.css" type="text/css" rel="stylesheet"/>
+        <link href="/profileCSS/profile.css" type="text/css" rel="stylesheet"/>
+        <link href="/profileCSS/profileIPHONE.css" type="text/css" rel="stylesheet"/>
     </head>
 
     <body>
@@ -19,16 +20,50 @@
             </div>
         </header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="resume.html">Resume</a>
-            <a href="school.html">School</a>
+            <ul>
+                <li style="border-right-style: none">
+                    <a href="index.html">Home</a>
+                </li>
+                <li style="border-right-style: none">
+                    <a href="projects.html">Projects</a>
+                </li>
+                <li style="border-right-style: none">
+                    <a href="resume.html">Jobs</a>
+                </li>
+                <li>
+                    <a href="school.html">School</a>
+                </li>
+            </ul>
         </nav>
         <div id="pageinfo">
             <section id="welcome">
-                <p>
-                    <a id="link" href="/ticketsystem/homepage.html">Ticket System</a>
-                    - November 2020
+                <p><a id="link" href="/ticketsystem/homepage.html">Ticket System</a>
+                    - 11/20 to Present
+                <br><br><br>
+                    HTML, CSS, JavaScript, Java, CGI
+                <br><br><br>
+                    Still under developement, but it will be a 
+                    general troubleshooting service
+                    that could be implemented for different systems.
+                </p>
+                <p><a id="link" href="https://www.planetminecraft.com/server/seven-kits-pvp/" target="_blank">Minecraft Server</a>
+                    - 5/20 to 10/20
+                <br><br><br>
+                    Java, MySQL
+                <br><br>
+                    Currently taking a break, the plugins I
+                    wrote in java can be found on 
+                    <a id="slink" href="https://github.com/cadeheinberg/SevenKitsPlugin" target="_blank">github</a>
+                    and this site <a id="slink" href="https://www.planetminecraft.com/server/seven-kits-pvp/" target="_blank">here.</a>
+                    has a few images
+                </p>
+                <p><a id="link" href="/ticketsystem/homepage.html">Filler</a>
+                    - 9/20 to 9/20
+                <br><br><br>
+                    Java
+                <br><br>
+                    Probably will put a cool project I made last year
+                    in CS300 or maybe include some projects from CS300
                 </p>
             </section>
         </div>
