--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com"/>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet"/>
         <link href='https://fonts.googleapis.com/css?family=Archivo Black' rel='stylesheet'/>
-        <link href="profile.css" type="text/css" rel="stylesheet"/>
+        <link href="/profileCSS/profile.css" type="text/css" rel="stylesheet"/>
+        <link href="/profileCSS/profileIPHONE.css" type="text/css" rel="stylesheet"/>
     </head>
 
     <body>
@@ -19,15 +20,49 @@
             </div>
         </header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="resume.html">Resume</a>
-            <a href="school.html">School</a>
+            <ul>
+                <li style="border-right-style: none">
+                    <a href="index.html">Home</a>
+                </li>
+                <li style="border-right-style: none">
+                    <a href="projects.html">Projects</a>
+                </li>
+                <li style="border-right-style: none">
+                    <a href="resume.html">Jobs</a>
+                </li>
+                <li>
+                    <a href="school.html">School</a>
+                </li>
+            </ul>
         </nav>
         <div id="pageinfo">
             <section id="welcome">
-                <p>
-                    Resume stuff here
+                <p><a id="link" href="https://www.wildwesttown.com/" target="_blank">Donley's Wild West Town</a>
+                    - 6/17 to 9/19
+                <br><br><br>
+                    Job Title
+                <br><br><br>
+                    Other things about the job will go here.
+                    And other things will also go here.
+                    Clicking on the will pull up contact info
+                </p>
+                <p><a id="link" href="https://locations.tacobell.com/il/huntley/13320-s-highway-47.html" target="_blank">Taco Bell</a>
+                    - 9/17 to 11/18
+                <br><br><br>
+                    Job Title
+                <br><br><br>
+                    Other things about the job will go here.
+                    And other things will also go here.
+                    Clicking on the will pull up contact info
+                </p>
+                <p><a id="link" href="https://www.cafe20marengo.com/">Cafe 20</a>
+                    - 8/16 to 2/17
+                <br><br><br>
+                    Job Title
+                <br><br><br>
+                    Other things about the job will go here.
+                    And other things will also go here.
+                    Clicking on the will pull up contact info
                 </p>
             </section>
         </div>
@@ -37,3 +72,5 @@
         </footer>
     </body>
 </html>
+
+
