--- a/school.html
+++ b/school.html
@@ -6,7 +6,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com"/>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet"/>
         <link href='https://fonts.googleapis.com/css?family=Archivo Black' rel='stylesheet'/>
-        <link href="profile.css" type="text/css" rel="stylesheet"/>
+        <link href="/profileCSS/profile.css" type="text/css" rel="stylesheet"/>
+        <link href="/profileCSS/profileIPHONE.css" type="text/css" rel="stylesheet"/>
     </head>
 
     <body>
@@ -19,15 +20,67 @@
             </div>
         </header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="resume.html">Resume</a>
-            <a href="school.html">School</a>
+            <ul>
+                <li style="border-right-style: none">
+                    <a href="index.html">Home</a>
+                </li>
+                <li style="border-right-style: none">
+                    <a href="projects.html">Projects</a>
+                </li>
+                <li style="border-right-style: none">
+                    <a href="resume.html">Jobs</a>
+                </li>
+                <li>
+                    <a href="school.html">School</a>
+                </li>
+            </ul>
         </nav>
         <div id="pageinfo">
             <section id="welcome">
-                <p>
-                    School stuff here
+                <p><a id="link" href="https://www.wisc.edu/" target="_blank">UW Madison</a>
+                    - Class 2023
+                <br><br><br>
+                    Pursing BS in Computer Science
+
+                <br><br><br>
+                <a id="blueink" href="" target="_blank">CS 400</a>
+                - Spring 2020
+                <br><br>
+                A description of the class describing the class
+                will go right here
+                <br><br><br>
+                <a id="blueink" href="" target="_blank">CS 240</a>
+                - Spring 2020
+                <br><br>
+                A description of the class describing the class
+                will go right here
+                <br><br><br>
+                <a id="blueink" href="" target="_blank">ECE 252</a>
+                - Spring 2020
+                <br><br>
+                A description of the class describing the class
+                will go right here
+                <br><br><br>
+                <a id="blueink" href="" target="_blank">CS 300</a>
+                - Spring 2020
+                <br><br>
+                A description of the class describing the class
+                will go right here
+                <br><br><br>
+                <a id="blueink" href="" target="_blank">MATH 222</a>
+                - Spring 2020
+                <br><br>
+                A description of the class describing the class
+                will go right here
+                </p>
+                <p><a id="link" href="https://locations.tacobell.com/il/huntley/13320-s-highway-47.html" target="_blank">Marengo High School</a>
+                    - Class 2019
+                <br><br><br>
+                    Job Title
+                <br><br><br>
+                    Other things about the job will go here.
+                    And other things will also go here.
+                    Clicking on the will pull up contact info
                 </p>
             </section>
         </div>
@@ -37,3 +90,5 @@
         </footer>
     </body>
 </html>
+
+
