--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 jobs, and anything else related!
                 <br><br><br><br><br>
                 If you would like to connect with me my
-                <a href="#gotobottom" style="font-size: 20px; color: rgb(0, 255, 64); text-decoration: underline; ">contact</a> info is below.
+                <a href="#gotobottom" style="color: rgb(0, 255, 64); text-decoration: underline; ">contact</a> info is below.
                 Go ahead, explore the website!
             </section>
         </div>
