--- a/school.html
+++ b/school.html
@@ -39,48 +39,45 @@
             <section id="welcome">
                 <p><a id="link" href="https://www.wisc.edu/" target="_blank">UW Madison</a>
                     - Class 2023
-                <br><br><br>
+                <br><br>
                     Pursing BS in Computer Science
 
-                <br><br><br>
+                <br><br>
                 <a id="blueink" href="" target="_blank">CS 400</a>
                 - Spring 2020
-                <br><br>
+                <br>
                 A description of the class describing the class
                 will go right here
-                <br><br><br>
+                <br><br>
                 <a id="blueink" href="" target="_blank">CS 240</a>
                 - Spring 2020
-                <br><br>
+                <br>
                 A description of the class describing the class
                 will go right here
-                <br><br><br>
+                <br><br>
                 <a id="blueink" href="" target="_blank">ECE 252</a>
                 - Spring 2020
-                <br><br>
+                <br>
                 A description of the class describing the class
                 will go right here
-                <br><br><br>
+                <br><br>
                 <a id="blueink" href="" target="_blank">CS 300</a>
                 - Spring 2020
-                <br><br>
+                <br>
                 A description of the class describing the class
                 will go right here
-                <br><br><br>
+                <br><br>
                 <a id="blueink" href="" target="_blank">MATH 222</a>
                 - Spring 2020
-                <br><br>
+                <br>
                 A description of the class describing the class
                 will go right here
                 </p>
-                <p><a id="link" href="https://locations.tacobell.com/il/huntley/13320-s-highway-47.html" target="_blank">Marengo High School</a>
+                <p><a id="link" href="none" target="_blank">Marengo High School</a>
                     - Class 2019
-                <br><br><br>
-                    Job Title
-                <br><br><br>
-                    Other things about the job will go here.
-                    And other things will also go here.
-                    Clicking on the will pull up contact info
+                <br><br>
+                    Graduated with 4.2 GPA
+                <br><br>
                 </p>
             </section>
         </div>
