--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="selfie.png" id="selfie"/>
             </div>
             <div id="mynamebox">
-                <h1>Cade Heinberg</h1>
+                <h1>Cade A. Heinberg</h1>
             </div>
         </header>
         <nav>
