--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         </header>
         <nav>
             <ul>
-                <li style="border-right-style: none">
+                <li id="navoffset" style="border-right-style: none; ">
                     <a href="index.html">Home</a>
                 </li>
-                <li style="border-right-style: none">
+                <li style="border-right-style: none;">
                     <a href="projects.html">Projects</a>
                 </li>
-                <li style="border-right-style: none">
+                <li style="border-right-style: none;">
                     <a href="resume.html">Jobs</a>
                 </li>
                 <li>
@@ -43,7 +43,7 @@
                 jobs, and anything else related!
                 <br><br>
                 If you would like to connect with me my
-                <a href="#gotobottom" style="color: rgb(0, 255, 64); text-decoration: underline; ">contact</a> info is below.
+                <a href="#gotobottom" style="color: yellow; text-decoration: underline; ">contact</a> info is below.
                 Go ahead, explore the website!
             </section>
         </div>
