--- a/school.html
+++ b/school.html
@@ -16,21 +16,21 @@
                 <img src="selfie.png" id="selfie"/>
             </div>
             <div id="mynamebox">
-                <h1>Cade Heinberg</h1>
+                <h1>Cade A. Heinberg</h1>
             </div>
         </header>
         <nav>
             <ul>
-                <li style="border-right-style: none">
+                <li style="border-right-style: none;">
                     <a href="index.html">Home</a>
                 </li>
-                <li style="border-right-style: none">
+                <li style="border-right-style: none;">
                     <a href="projects.html">Projects</a>
                 </li>
-                <li style="border-right-style: none">
+                <li style="border-right-style: none;">
                     <a href="resume.html">Jobs</a>
                 </li>
-                <li>
+                <li id="navoffset">
                     <a href="school.html">School</a>
                 </li>
             </ul>
