--- a/projects.html
+++ b/projects.html
@@ -16,18 +16,18 @@
                 <img src="selfie.png" id="selfie"/>
             </div>
             <div id="mynamebox">
-                <h1>Cade Heinberg</h1>
+                <h1>Cade A. Heinberg</h1>
             </div>
         </header>
         <nav>
             <ul>
-                <li style="border-right-style: none">
+                <li style="border-right-style: none;">
                     <a href="index.html">Home</a>
                 </li>
-                <li style="border-right-style: none">
+                <li id="navoffset" style="border-right-style: none;">
                     <a href="projects.html">Projects</a>
                 </li>
-                <li style="border-right-style: none">
+                <li style="border-right-style: none;">
                     <a href="resume.html">Jobs</a>
                 </li>
                 <li>
