--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link href='https://fonts.googleapis.com/css?family=Archivo Black' rel='stylesheet'/>
         <link href="/profileCSS/profile.css" type="text/css" rel="stylesheet"/>
         <link href="/profileCSS/profileIPHONE.css" type="text/css" rel="stylesheet"/>
+        <link href="/profileCSS/profileHALF.css" type="text/css" rel="stylesheet"/>
+        <link href="/profileCSS/profileFOURTH.css" type="text/css" rel="stylesheet"/>
     </head>
 
     <body>
@@ -30,7 +32,7 @@
                 <li style="border-right-style: none;">
                     <a href="resume.html">Jobs</a>
                 </li>
-                <li>
+                <li id="navbalance">
                     <a href="school.html">School</a>
                 </li>
             </ul>
