--- a/projects.html
+++ b/projects.html
@@ -21,17 +21,17 @@
         </header>
         <nav>
             <ul>
-                <li style="border-right-style: none;">
-                    <a href="index.html">Home</a>
-                </li>
-                <li id="navoffset" style="border-right-style: none;">
-                    <a href="projects.html">Projects</a>
-                </li>
-                <li style="border-right-style: none;">
-                    <a href="resume.html">Jobs</a>
+                <li>
+                    <a href="index.html"><button>Home</button></a>
                 </li>
                 <li>
-                    <a href="school.html">School</a>
+                    <a href="projects.html"><button id="navoffset">Projects</button></a>
+                </li>
+                <li>
+                    <a href="resume.html"><button>Work</button></a>
+                </li>
+                <li>
+                    <a href="school.html"><button>School</button></a>
                 </li>
             </ul>
         </nav>
