--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         </header>
         <nav>
             <ul>
-                <li id="navoffset" style="border-right-style: none; ">
-                    <a href="index.html">Home</a>
+                <li>
+                    <a href="index.html"><button id="navoffset">Home</button></a>
                 </li>
-                <li style="border-right-style: none;">
-                    <a href="projects.html">Projects</a>
+                <li>
+                    <a href="projects.html"><button>Projects</button></a>
                 </li>
-                <li style="border-right-style: none;">
-                    <a href="resume.html">Jobs</a>
+                <li>
+                    <a href="resume.html"><button>Work</button></a>
                 </li>
-                <li id="navbalance">
-                    <a href="school.html">School</a>
+                <li>
+                    <a href="school.html"><button>School</button></a>
                 </li>
             </ul>
         </nav>
