--- a/school.html
+++ b/school.html
@@ -10,7 +10,7 @@
         <link href="/profileCSS/profileIPHONE.css" type="text/css" rel="stylesheet"/>
     </head>
 
-    <body>
+    <body id="longbody">
         <header>
             <div id="selfiebox">
                 <img src="selfie.png" id="selfie"/>
@@ -21,17 +21,17 @@
         </header>
         <nav>
             <ul>
-                <li style="border-right-style: none;">
-                    <a href="index.html">Home</a>
+                <li>
+                    <a href="index.html"><button>Home</button></a>
                 </li>
-                <li style="border-right-style: none;">
-                    <a href="projects.html">Projects</a>
+                <li>
+                    <a href="projects.html"><button>Projects</button></a>
                 </li>
-                <li style="border-right-style: none;">
-                    <a href="resume.html">Jobs</a>
+                <li>
+                    <a href="resume.html"><button>Work</button></a>
                 </li>
-                <li id="navoffset">
-                    <a href="school.html">School</a>
+                <li>
+                    <a href="school.html"><button id="navoffset">School</button></a>
                 </li>
             </ul>
         </nav>
