--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 This is an ongoing blog of my projects, classes,
                 jobs, and anything else related!
                 <br><br>
-                If you would like to connect with me my
+                If you would like to connect with me, my
                 <a href="#gotobottom" style="color: yellow; text-decoration: underline; ">contact</a> info is below.
                 Go ahead, explore the website!
             </section>
