--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
                 <br>
                     HTML, CSS, JavaScript, Java, CGI
                 <br>
-                    Still under developement, but it will be a 
+                    Still under development, but it will be a 
                     general troubleshooting service
                     that could be implemented for different systems.
                 </p>
@@ -54,7 +54,7 @@
                     Currently taking a break, the plugins I
                     wrote in java can be found on 
                     <a id="slink" href="https://github.com/cadeheinberg/SevenKitsPlugin" target="_blank">github</a>
-                    and this site <a id="slink" href="https://www.planetminecraft.com/server/seven-kits-pvp/" target="_blank">here.</a>
+                    and this site <a id="slink" href="https://www.planetminecraft.com/server/seven-kits-pvp/" target="_blank">here</a>
                     has a few images
                 </p>
                 <p><a id="link" href="/ticketsystem/homepage.html">Filler</a>
