--- a/school.html
+++ b/school.html
@@ -40,7 +40,7 @@
                 <p><a id="link" href="https://www.wisc.edu/" target="_blank">UW Madison</a>
                     - Class 2023
                 <br><br>
-                    Pursing BS in Computer Science
+                    Pursuing BS in Computer Science
 
                 <br><br>
                 <a id="blueink" href="" target="_blank">CS 400</a>
