ubuntu font added

--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
         <META charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Profile</title>
-        <link rel="preconnect" href="https://fonts.gstatic.com"/>
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet"/>
-        <link href='https://fonts.googleapis.com/css?family=Archivo Black' rel='stylesheet'/>
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin"/>
         <link href="/profileCSS/profile.css" type="text/css" rel="stylesheet"/>
-        <link href="/profileCSS/profileIPHONE.css" type="text/css" rel="stylesheet"/>
     </head>
 
     <body>
@@ -50,7 +47,7 @@
             </section>
         </div>
         <footer id="gotobottom">
-            <p>Cade Austin Heinberg</p>
+            <p>Cade Heinberg</p>
             <p>cheinberg@wisc.edu</p>
         </footer>
     </body>
