--- a/projects.html
+++ b/projects.html
@@ -33,20 +33,24 @@
             </ul>
         </nav>
         <div id="pageinfo">
-            <section id="welcome">
-                <p><a id="link" href="/ticketsystem/homepage.html">Ticket System</a>
+            <section>
+                <p id="afterspace"><a id="link" href="/ticketsystem/homepage.html">Ticket System</a>
                     - 11/20 to Present
-                <br>
+                </p>
+                <p>
                     HTML, CSS, JavaScript, Java, CGI
                 <br>
                     Still under development, but it will be a 
                     general troubleshooting service
                     that could be implemented for different systems.
                 </p>
+            </section>
+            <section>
                 <p><a id="link" href="https://www.planetminecraft.com/server/seven-kits-pvp/" target="_blank">Minecraft Server</a>
                     - 5/20 to 10/20
-                <br>
-                    Java, MySQL
+                </p>
+                <p>
+                    HTML, CSS, JavaScript, Java, CGI
                 <br>
                     Currently taking a break, the plugins I
                     wrote in java can be found on 
@@ -54,18 +58,22 @@
                     and this site <a id="slink" href="https://www.planetminecraft.com/server/seven-kits-pvp/" target="_blank">here</a>
                     has a few images
                 </p>
+            </section>
+            <section>
                 <p><a id="link" href="/ticketsystem/homepage.html">Filler</a>
                     - 9/20 to 9/20
-                <br>
+                </P>
+                <p>
                     Java
                 <br>
                     Probably will put a cool project I made last year
                     in CS300 or maybe include some projects from CS300
                 </p>
+                </p>
             </section>
         </div>
         <footer>
-            <p>Cade Austin Heinberg</p>
+            <p>Cade Heinberg</p>
             <p>cheinberg@wisc.edu</p>
         </footer>
     </body>
