--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
             </section>
         </div>
         <footer>
-            <p>Cade Austin Heinberg</p>
+            <p>Cade Heinberg</p>
             <p>cheinberg@wisc.edu</p>
         </footer>
     </body>
