--- a/school.html
+++ b/school.html
@@ -79,7 +79,7 @@
             </section>
         </div>
         <footer>
-            <p>Cade Austin Heinberg</p>
+            <p>Cade Heinberg</p>
             <p>cheinberg@wisc.edu</p>
         </footer>
     </body>
