--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html"><button id="navoffset">Home</button></a>
+                    <a href="index.html"><button id="navoffset">About</button></a>
                 </li>
                 <li>
                     <a href="projects.html"><button>Projects</button></a>
