--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,16 @@
         </nav>
         <div id="pageinfo">
             <section>
+                <p id="afterspace"><a id="link" href="/home/cheinberg/project4/project-four-bg/graupe_Front_End_2/SignIn.html">CS400 Project 4</a>
+                    - 11/20 to Present
+                </p>
+                <p>
+                    HTML, CSS, JavaScript, Java, CGI
+                <br>
+                    Group project, not mine
+                </p>
+            </section>
+            <section>
                 <p id="afterspace"><a id="link" href="/ticketsystem/homepage.html">Ticket System</a>
                     - 11/20 to Present
                 </p>
