--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
         </nav>
         <div id="pageinfo">
             <section>
-                <p id="afterspace"><a id="link" href="../../../home/cheinberg/project4/project-four-bg/graupe_Front_End_2/SignIn.html">CS400 Project 4</a>
+                <p id="afterspace"><a id="link" href="/graupe_Front_End_2/SignIn.html">CS400 Project 4</a>
                     - 11/20 to Present
                 <p>
                     HTML, CSS, JavaScript, Java, CGI
