--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <br><br>
                     This is an ongoing blog of my projects, classes,
                     jobs, and anything else related!
+                    I am trying to add this line from my iPad.
                     <br><br>
                     If you would like to connect with me, my
                     <a href="#gotobottom" style="color: yellow; text-decoration: underline; ">contact</a> info is below.
