--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="pageinfo">
             <section id="welcome">
                 <p>
-                    Welcome to my website!
+                    Welcome to my cool website!
                     <br><br>
                     This is an ongoing blog of my projects, classes,
                     jobs, and anything else related!
