updated it to be more updated

--- a/projects.html
+++ b/projects.html
@@ -34,41 +34,24 @@
         </nav>
         <div id="pageinfo">
             <section>
-                <p id="afterspace"><a id="link" href="/ticketsystem/homepage.html">Ticket System</a>
-                    - 11/20 to Present
-                </p>
-                <p>
-                    HTML, CSS, JavaScript, Java, CGI
-                <br>
-                    Still under development, but it will be a 
-                    general troubleshooting service
-                    that could be implemented for different systems.
-                </p>
-            </section>
-            <section>
                 <p><a id="link" href="https://www.planetminecraft.com/server/seven-kits-pvp/" target="_blank">Minecraft Server</a>
-                    - 5/20 to 10/20
+                    - 5/20 to Present - JAVA, SQL
                 </p>
                 <p>
-                    HTML, CSS, JavaScript, Java, CGI
-                <br>
-                    Currently taking a break, the plugins I
-                    wrote in java can be found on 
-                    <a id="slink" href="https://github.com/cadeheinberg/SevenKitsPlugin" target="_blank">github</a>
+                    Coding and testing original plugins for Minecraft. 
+                    Using Google Cloud compute engine to host multiple servers tied together by a proxy server.
+                    <a id="slink" href="https://github.com/cadeheinberg/SKplugin" target="_blank">github</a>
                     and this site <a id="slink" href="https://www.planetminecraft.com/server/seven-kits-pvp/" target="_blank">here</a>
-                    has a few images
+                    has a few images. The server IP address is: 34.123.191.172 which you can connect to via a Minecraft account and launcher
                 </p>
             </section>
             <section>
-                <p><a id="link" href="/ticketsystem/homepage.html">Filler</a>
-                    - 9/20 to 9/20
+                <p><a id="link" href="/ticketsystem/homepage.html">This Website</a>
+                    - 10/20 to Present - HTML, CSS
                 </P>
                 <p>
-                    Java
-                <br>
-                    Probably will put a cool project I made last year
-                    in CS300 or maybe include some projects from CS300
-                </p>
+                    I plan to add JavaScript to make switching between pages more seemless.
+                    Code for this website can be found here <a id="slink" href="https://github.com/cadeheinberg/html" target="_blank">github</a>
                 </p>
             </section>
         </div>
