--- a/school.html
+++ b/school.html
@@ -36,44 +36,73 @@
             <section id="welcome">
                 <p><a id="link" href="https://www.wisc.edu/" target="_blank">UW Madison</a>
                     - Class 2023
-                <br><br>
+                <br>
                     Pursuing BS in Computer Science
-
-                <br><br>
-                <a id="blueink" href="" target="_blank">CS 400</a>
-                - Spring 2020
                 <br>
-                A description of the class describing the class
-                will go right here
-                <br><br>
-                <a id="blueink" href="" target="_blank">CS 240</a>
-                - Spring 2020
-                <br>
-                A description of the class describing the class
-                will go right here
-                <br><br>
-                <a id="blueink" href="" target="_blank">ECE 252</a>
-                - Spring 2020
-                <br>
-                A description of the class describing the class
-                will go right here
-                <br><br>
-                <a id="blueink" href="" target="_blank">CS 300</a>
-                - Spring 2020
-                <br>
-                A description of the class describing the class
-                will go right here
-                <br><br>
-                <a id="blueink" href="" target="_blank">MATH 222</a>
-                - Spring 2020
-                <br>
-                A description of the class describing the class
-                will go right here
+                <ul>
+                    <li>
+                        <a id="blueink" href="" target="_blank">CS 400</a>
+                        - Spring 2020
+                        <br>
+                        A description of the class describing the class
+                        will go right here
+                    </li>
+                    <br>
+                    <li>
+                        <a id="blueink" href="" target="_blank">CS 240</a>
+                        - Spring 2020
+                        <br>
+                        A description of the class describing the class
+                        will go right here
+                    </li>
+                    <br>
+                    <li>
+                        <a id="blueink" href="" target="_blank">ECE 252</a>
+                        - Spring 2020
+                        <br>
+                        A description of the class describing the class
+                        will go right here
+                    </li>
+                    <br>
+                    <li>
+                        <a id="blueink" href="" target="_blank">CS 300</a>
+                        - Spring 2020
+                        <br>
+                        A description of the class describing the class
+                        will go right here
+                    </li>
+                    <br>
+                    <li>
+                        <a id="blueink" href="" target="_blank">MATH 222</a>
+                        - Spring 2020
+                        <br>
+                        A description of the class describing the class
+                        will go right here
+                    </li>
+                </ul>
                 </p>
+                <br>
                 <p><a id="link" href="none" target="_blank">Marengo High School</a>
                     - Class 2019
-                <br><br>
+                <br>
                     Graduated with 4.2 GPA
+                    <ul>
+                        <li>
+                            <a id="blueink" href="" target="_blank">National Honor Society</a>
+                            - Senior Year
+                            <br>
+                            A description of the class describing the class
+                            will go right here
+                        </li>
+                        <br>
+                        <li>
+                            <a id="blueink" href="" target="_blank">Peer Tutoring</a>
+                            - Sophomore to Senior
+                            <br>
+                            A description of the class describing the class
+                            will go right here
+                        </li>
+                    </ul>
                 <br><br>
                 </p>
             </section>
