--- a/resume.html
+++ b/resume.html
@@ -32,31 +32,36 @@
                 </li>
             </ul>
         </nav>
+
+
+
+
         <div id="pageinfo">
-            <section id="welcome">
+            <section>
                 <p><a id="link" href="https://www.wildwesttown.com/" target="_blank">Donley's Wild West Town</a>
-                    - 6/17 to 9/19
-                <br>
-                    Job Title
-                <br>
+                    - 6/17 to 9/19 - Attractions Operator
+                </p>
+                <p>
                     Other things about the job will go here.
                     And other things will also go here.
                     Clicking on the will pull up contact info
                 </p>
+            </section>
+            <section>
                 <p><a id="link" href="https://locations.tacobell.com/il/huntley/13320-s-highway-47.html" target="_blank">Taco Bell</a>
-                    - 9/17 to 11/18
-                <br>
-                    Job Title
-                <br>
+                    - 9/17 to 11/18 - Attractions Operator
+                </p>
+                <p>
                     Other things about the job will go here.
                     And other things will also go here.
                     Clicking on the will pull up contact info
                 </p>
+            </section>
+            <section>
                 <p><a id="link" href="https://www.cafe20marengo.com/">Cafe 20</a>
-                    - 8/16 to 2/17
-                <br>
-                    Job Title
-                <br>
+                    - 8/16 to 2/17 - Attractions Operator
+                </p>
+                <p>
                     Other things about the job will go here.
                     And other things will also go here.
                     Clicking on the will pull up contact info
