--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="selfie.png" id="selfie"/>
             </div>
             <div id="mynamebox">
-                <h1>Cade A. Heinberg</h1>
+                <h1>Cade Heinberg</h1>
             </div>
         </header>
         <nav>
@@ -41,7 +41,7 @@
                     jobs, and anything else related!
                     <br><br>
                     If you would like to connect with me, my
-                    <a href="#gotobottom" style="color: yellow; text-decoration: underline; ">contact</a> info is below.
+                    <a href="#gotobottom" id="link">contact</a> info is below.
                 </p>
             </section>
         </div>
