--- a/school.html
+++ b/school.html
@@ -13,7 +13,7 @@
                 <img src="selfie.png" id="selfie"/>
             </div>
             <div id="mynamebox">
-                <h1>Cade A. Heinberg</h1>
+                <h1>Cade Heinberg</h1>
             </div>
         </header>
         <nav>
@@ -41,7 +41,7 @@
                 <br>
                 <ul>
                     <li>
-                        <a id="blueink" href="" target="_blank">CS 400</a>
+                        <a id="slink" href="" target="_blank">CS 400</a>
                         - Spring 2020
                         <br>
                         A description of the class describing the class
@@ -49,7 +49,7 @@
                     </li>
                     <br>
                     <li>
-                        <a id="blueink" href="" target="_blank">CS 240</a>
+                        <a id="slink" href="" target="_blank">CS 240</a>
                         - Spring 2020
                         <br>
                         A description of the class describing the class
@@ -57,7 +57,7 @@
                     </li>
                     <br>
                     <li>
-                        <a id="blueink" href="" target="_blank">ECE 252</a>
+                        <a id="slink" href="" target="_blank">ECE 252</a>
                         - Spring 2020
                         <br>
                         A description of the class describing the class
@@ -65,7 +65,7 @@
                     </li>
                     <br>
                     <li>
-                        <a id="blueink" href="" target="_blank">CS 300</a>
+                        <a id="slink" href="" target="_blank">CS 300</a>
                         - Spring 2020
                         <br>
                         A description of the class describing the class
@@ -73,7 +73,7 @@
                     </li>
                     <br>
                     <li>
-                        <a id="blueink" href="" target="_blank">MATH 222</a>
+                        <a id="slink" href="" target="_blank">MATH 222</a>
                         - Spring 2020
                         <br>
                         A description of the class describing the class
@@ -88,7 +88,7 @@
                     Graduated with 4.2 GPA
                     <ul>
                         <li>
-                            <a id="blueink" href="" target="_blank">National Honor Society</a>
+                            <a id="slink" href="" target="_blank">National Honor Society</a>
                             - Senior Year
                             <br>
                             A description of the class describing the class
@@ -96,7 +96,7 @@
                         </li>
                         <br>
                         <li>
-                            <a id="blueink" href="" target="_blank">Peer Tutoring</a>
+                            <a id="slink" href="" target="_blank">Peer Tutoring</a>
                             - Sophomore to Senior
                             <br>
                             A description of the class describing the class
