--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
                 <img src="selfie.png" id="selfie"/>
             </div>
             <div id="mynamebox">
-                <h1>Cade A. Heinberg</h1>
+                <h1>Cade Heinberg</h1>
             </div>
         </header>
         <nav>
@@ -34,19 +34,27 @@
         </nav>
         <div id="pageinfo">
             <section>
-                <p><a id="link" href="https://www.planetminecraft.com/server/seven-kits-pvp/" target="_blank">Minecraft Server</a>
+                <p><a id="link" href="google.com" target="_blank">Crypto Scraper</a>
+                    - 5/21 to Present - JAVASCRIPT, SQL, PYTHON
+                </p>
+                <p>
+                    Host to view the cryptos I am invested in! Host to view the cryptos I am invested in!
+                    Host to view the cryptos I am invested in! Host to view the cryptos I am invested in!
+                    Host to view the cryptos I am invested in!
+                </p>
+            </section>
+            <section>
+                <p><a id="link" href="/minecraft/mcserver.html" target="_blank">Minecraft Server</a>
                     - 5/20 to Present - JAVA, SQL
                 </p>
                 <p>
                     Coding and testing original plugins for Minecraft. 
                     Using Google Cloud compute engine to host multiple servers tied together by a proxy server.
-                    <a id="slink" href="https://github.com/cadeheinberg/SKplugin" target="_blank">github</a>
-                    and this site <a id="slink" href="https://www.planetminecraft.com/server/seven-kits-pvp/" target="_blank">here</a>
-                    has a few images. The server IP address is: 34.123.191.172 which you can connect to via a Minecraft account and launcher
+                    The server IP address is: 34.123.191.172 which you can connect to via a Minecraft account and launcher
                 </p>
             </section>
             <section>
-                <p><a id="link" href="/ticketsystem/homepage.html">This Website</a>
+                <p><a id="link" href="cadeheinberg.com">This Website</a>
                     - 10/20 to Present - HTML, CSS
                 </P>
                 <p>
